fixed z-index issue

--- a/assets/css/main_carousel.css
+++ b/assets/css/main_carousel.css
@@ -54,8 +54,10 @@ header nav a{
     position: relative;
     height: 90vh;
     overflow: hidden;
-    margin-top: -70px;
+    margin-top: 1px;
+    z-index: -1;
 }
+
 .carousel .list{
     position: absolute;
     width: 1140px;
