--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,7 @@ a, .btn{
 
 /* DESKTOP - NAV BAR */
 /* change style to flex-box */
+
 nav, .nav-links{
     display: flex;
 }
@@ -33,18 +34,31 @@ nav, .nav-links{
 nav {
     justify-content: space-around; /*for horizontal*/
     align-items: center;    /* for vertical */
-    height: 10vh;
+    height: 8vh;
 }
 
 .nav-links{
     list-style: none; 
     gap: 2rem;
     font-size: 1.5rem;
+    
 }
 
 a{
     color: black;
     text-decoration: none;
+}
+
+.hey{
+    color: blue;
+}
+
+.nav-links:hover::after{
+    display: none;
+}
+
+.title a:hover{
+    color: red;
 }
 
 a:hover{
@@ -152,7 +166,123 @@ a:hover{
     transform: none;
 }
 
+/*=============== SIDEBAR ===============*/
+.sidebar {
+    position: fixed;
+    width: 100px;
+    height: 100vh;
+    background-color: white;
+    border-right: 1px solid var(--box-color);
+    transition: .5s;
+    
+}
+.nav__logo {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 1.8rem;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--skin-color);
+    text-align: center;
+    margin: auto;
+}
 
+.nav__logo-text {
+    font-size: 1.125rem;
+    color: var(--title-color);
+    font-weight: var(--font-bold);
+    line-height: 40px;
+}
+
+.nav__menu {
+    position: fixed;
+    transform: rotate(-90deg) translateX(-100%);
+    transform-origin: left top;
+    width: 100vh;
+}
+
+.menu {
+    display: flex;
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: -2px auto 0 auto;
+}
+
+.nav__link {
+    float: right;
+    height: 100%;
+    line-height: 100px;
+    padding: 0 1rem;
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    position: relative;
+    transition: .4s;
+}
+
+.btn__share {
+    position: absolute;
+    bottom: 1.8rem;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.social__share {
+    font-size: 1.5rem;
+}
+
+.nav__toggle {
+    height: 32px;
+    width: 36px;
+    cursor: pointer;
+    position: fixed;
+    right: 1.5rem;
+    top: 2rem;
+    font-size: 1.2rem;
+    border-radius: .25rem;
+    background-color: var(--skin-color);
+    color: var(--title-color);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: var(--z-fixed);
+}
+
+.nav__close {
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 1.25rem;
+    cursor: pointer;
+    display: none;
+}
+
+/* Active Link */
+.nav__link.active-link, .nav__link:hover {
+    color: var(--skin-color);
+}
+
+.nav__link.active-link::after, .nav__link:hover::after {
+    position: absolute;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background-color: var(--skin-color);
+    border-radius: 50%;
+    bottom: 1.8rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.main{
+    margin-left: 100px;
+}
 
 /*===== Qualification Section =====*/
 
